yaml/1-2-simplepodwithservice.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    app: web
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web  
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
